# snapdog

./: .dockerignore  .editorconfig  .env.test.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.client  Makefile  PLAN-KNX-DEVICE.md  README.md  audit.toml  docker-compose.dev.yml  eq.json  release-please-config.json  snapdog.dev.toml  snapdog.example.toml
.cargo/: config.toml
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
.kiro/prompts/: product.md  tech.md
.kiro/steering/: kiro-rules.md  product.md  structure.md  tech.md
.wrangler/cache/: cf.json
assets/: snapdog-icon.ai  snapdog-logo.ai
assets/icons/: snapdog-icon.ai  snapdog-logo-compact.ai  snapdog-logo.ai
aur/snapdog/: PKGBUILD
aur/snapdog-client/: PKGBUILD
debian/dists/stable/: Release
debian/pool/: snapdog-client_0.11.0-1_amd64.deb  snapdog-client_0.11.0-1_arm64.deb  snapdog-client_0.11.2-1_amd64.deb  snapdog-client_0.11.2-1_arm64.deb  snapdog-client_0.7.0-1_amd64.deb  snapdog-client_0.7.0-1_arm64.deb  snapdog-client_0.8.0-1_amd64.deb  snapdog-client_0.8.0-1_arm64.deb  snapdog-client_0.9.2-1_amd64.deb  snapdog-client_0.9.2-1_arm64.deb
devcontainer/music/AC DC/Back in Black (1980)/: 01 - Hells Bells.m4a  02 - Shoot to Thrill.m4a  03 - What Do You Do for Money Honey.m4a  04 - Given the Dog a Bone.m4a  05 - Let Me Put My Love into You.m4a  06 - Back in Black.m4a  07 - You Shook Me All Night Long.m4a  08 - Have a Drink on Me.m4a  09 - Shake a Leg.m4a  10 - Rock and Roll Ain't Noise Pollution.m4a
devcontainer/music/Dr. Dre/The Chronic (1992)/: 01 - The Chronic (Intro).m4a  02 - Fuck wit Dre Day (And Everybody's Celebratin').m4a  03 - Let Me Ride.m4a  04 - The Day the Niggaz Took Over.m4a  05 - Nuthin' but a 'G' Thang.m4a  06 - Deeez Nuuuts.m4a  07 - Lil' Ghetto Boy.m4a  08 - A Nigga Witta Gun.m4a  09 - Rat-Tat-Tat-Tat.m4a  10 - The The $20 Sack Pyramid0 Sack Pyramid.m4a  11 - Lyrical Gangbang.m4a  12 - High Powered.m4a  13 - The Doctor's Office.m4a  14 - Stranded on Death Row.m4a  15 - The Roach (The Chronic Outro).m4a  16 - Bitches Ain't Shit.m4a
devcontainer/music/Eagles/Hotel California (1976)/: 01 - Hotel California.m4a  02 - New Kid in Town.m4a  03 - Life in the Fast Lane.m4a  04 - Wasted Time.m4a  05 - Wasted Time (Reprise).m4a  06 - Victim of Love.m4a  07 - Pretty Maids All in a Row.m4a  08 - Try and Love Again.m4a  09 - The Last Resort.m4a
devcontainer/music/Led Zeppelin/Led Zeppelin IV (1971)/: 01 - Black Dog.m4a  02 - Rock and Roll.m4a  03 - The Battle of Evermore.m4a  04 - Stairway to Heaven.m4a  05 - Misty Mountain Hop.m4a  (+3 more)
devcontainer/navidrome/: navidrome.db
devcontainer/snapcast-client/: Dockerfile
devcontainer/snapcast-server/: Dockerfile
devcontainer/snapdog-client/: Dockerfile
docs/architecture/: decisions.md
knx/: SnapDog-Client.templ.xml  SnapDog-Client.xml  SnapDog-Zone.templ.xml  SnapDog-Zone.xml  SnapDog.xml  snapdog.knxprod
knx-rs/knx-core/: Cargo.toml
knx-rs/knx-core/src/: address.rs  apdu.rs  cemi.rs  cemi_tests.rs  device.rs  knxip.rs  lib.rs  message.rs  tpdu.rs  types.rs
knx-rs/knx-core/src/dpt/: convert.rs  mod.rs
knx-rs/knx-core/tests/: golden_cemi.rs  golden_dpt.rs
knx-rs/knx-core/tests/fixtures/: cemi_vectors.json
knx-rs/knx-device/: Cargo.toml
knx-rs/knx-device/src/: lib.rs
knx-rs/knx-ip/: Cargo.toml
knx-rs/knx-ip/src/: lib.rs
knx-rs/knx-tp/: Cargo.toml
knx-rs/knx-tp/src/: lib.rs
knx-rs/test-vectors/: Makefile  dpt_vectors.json  generate  generate.cpp
macos-helper/SnapDogHelper/: Package.swift
macos-helper/SnapDogServer/: project.yml
macos-helper/SnapDogServer/SnapDog Server/: App.swift  ConfigView.swift  Info.plist  ServerManager.swift  TOMLConfigParser.swift
macos-helper/SnapDogServer/SnapDog Server.xcodeproj/: project.pbxproj
snapdog/: Cargo.toml  build.rs
snapdog-client/: Cargo.toml  build.rs
snapdog-client/debian/: snapdog-client.default
snapdog-client/src/: cli.rs  eq.rs  logging.rs  main.rs
snapdog-client/src/player/: mod.rs
snapdog-client/systemd/: snapdog-client.service
snapdog-common/: Cargo.toml
snapdog-common/src/: lib.rs
snapdog/debian/: snapdog.default
snapdog/src/: lib.rs  main.rs  service_windows.rs  spinorama.rs
snapdog/src/airplay/: ffi.rs  mod.rs
snapdog/src/api/: auth.rs  error.rs  health.rs  mod.rs  webui.rs  ws.rs
snapdog/src/api/routes/: client_eq.rs  clients.rs  eq.rs  knx.rs  media.rs  mod.rs  speakers.rs  system.rs  zones.rs
snapdog/src/audio/: cache.rs  eq.rs  icy.rs  mod.rs  resample.rs
snapdog/src/config/: convention.rs  mod.rs  types.rs
snapdog/src/knx/: client.rs  device.rs  group_objects.rs  mod.rs  transport.rs
snapdog/src/mqtt/: mod.rs
snapdog/src/player/: commands.rs  context.rs  helpers.rs  mod.rs  runner.rs
snapdog/src/process/: mod.rs
snapdog/src/receiver/: airplay.rs  mod.rs  spotify.rs
snapdog/src/snapcast/: backend.rs  connection.rs  embedded.rs  events.rs  mod.rs  process.rs  protocol.rs  types.rs
snapdog/src/state/: cover.rs  mod.rs
snapdog/src/subsonic/: mod.rs
snapdog/systemd/: snapdog.service
snapdog/tests/: integration.rs
webui/: next.config.ts  package-lock.json  package.json
webui/messages/: de.json  en.json  es.json  fr.json  nl.json
webui/src/app/: globals.css  layout.tsx  page.tsx
webui/src/components/: AboutButton.tsx  ApiKeyPrompt.tsx  ClientList.tsx  ConnectionStatus.tsx  EqCurve.tsx  EqOverlay.tsx  LocalePicker.tsx  Marquee.tsx  NowPlaying.tsx  PlaylistBrowser.tsx  ProgrammingMode.tsx  RadioStations.tsx  SeekBar.tsx  ShuffleRepeat.tsx  ThemeToggle.tsx  TransportControls.tsx  VolumeSlider.tsx  ZoneDetail.tsx  ZoneRailItem.tsx  ZoneSwitcher.tsx
webui/src/hooks/: useClientDrop.ts  useEqEnabled.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useOptimisticValue.ts  useWebSocket.ts
webui/src/i18n/: config.ts  provider.tsx  request.ts  useLocaleState.ts
webui/src/lib/: api.ts  auth.ts  eq-response.ts  format-time.ts  log-api-error.ts  types.ts
webui/src/stores/: useAppStore.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+89 files in other folders)
