[workspace]
resolver = "2"
members = ["snapdog"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/snapdog"
authors = ["Fabian Schmieder"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Snapcast control
snapcast-control = "0.4"

# Audio decoding
symphonia = { version = "0.5", features = ["aac", "mp3", "flac", "alac", "isomp4", "pcm"] }

# MQTT
rumqttc = "0.24"

# KNX
knxkit = "0.1"

# HTTP client (Subsonic API, radio streams)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Stream utilities
futures-util = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
[workspace.dependencies.mockall]
version = "0.13"

[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.wiremock]
version = "0.6"

[profile.release]
lto = true
strip = true
codegen-units = 1
