[workspace]
resolver = "2"
members = ["snapdog", "snapdog-client"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/snapdog"
authors = ["Fabian Schmieder"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Audio decoding
symphonia = { version = "0.5", features = ["aac", "mp3", "flac", "alac", "isomp4", "pcm"] }

# Audio resampling
rubato = "0.16"
biquad = "0.6"

# MQTT
rumqttc = "0.24"

# KNX
knxkit = { git = "https://github.com/metaneutrons/knxkit", branch = "metaneutrons/v0.2-dev" }
knxkit_dpt = { git = "https://github.com/metaneutrons/knxkit", branch = "metaneutrons/v0.2-dev" }

# HTTP client (Subsonic API, radio streams)
reqwest = { version = "0.12", features = ["json", "stream"] }

# URL parsing
url = "2"

# Stream utilities
futures-util = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Snapcast
snapcast-server = { version = "0.6", features = ["flac", "encryption", "mdns"] }
snapcast-proto = "0.6"

# Utilities
md5 = "0.7"
fastrand = "2"
bytes = "1"

# Testing
[workspace.dependencies.mockall]
version = "0.13"

[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.wiremock]
version = "0.6"

[workspace.dependencies.dotenvy]
version = "0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1

