[package]
name = "snapdog-client"
description = "SnapDog multiroom audio client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snapdog-client"
path = "src/main.rs"

[dependencies]
snapcast-client = "0.6"
snapcast-proto = "0.6"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
base64 = "0.22"
libc = "0.2"
cpal = "0.15"

[features]
default = ["mdns", "f32lz4", "encryption"]
mdns = ["snapcast-client/mdns"]
f32lz4 = ["snapcast-client/f32lz4"]
websocket = ["snapcast-client/websocket"]
tls = ["snapcast-client/tls"]
resampler = ["snapcast-client/resampler"]
custom-protocol = ["snapcast-client/custom-protocol"]
encryption = ["snapcast-client/encryption"]
