[package]
name = "snapdog-client"
description = "SnapDog multiroom audio client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snapdog-client"
path = "src/main.rs"


[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11"
[dependencies]
snapcast-client = "0.7"
snapcast-proto = "0.7"
snapdog-common = { workspace = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
base64 = "0.22"
libc = "0.2"
cpal = "0.17"
biquad = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.11.0"

[features]
default = ["mdns", "f32lz4", "encryption", "custom-protocol"]
mdns = ["snapcast-client/mdns"]
f32lz4 = ["snapcast-client/f32lz4"]
websocket = ["snapcast-client/websocket"]
tls = ["snapcast-client/tls"]
resampler = ["snapcast-client/resampler"]
custom-protocol = ["snapcast-client/custom-protocol"]
encryption = ["snapcast-client/encryption"]

[package.metadata.deb]
section = "sound"
copyright = "2026 Fabian Schmieder"
depends = "libasound2"
assets = [
  ["target/release/snapdog-client", "usr/bin/", "755"],
  ["debian/snapdog-client.default", "etc/default/snapdog-client", "644"],
]
systemd-units = { unit-name = "snapdog-client", enable = true, start = true }

[lints]
workspace = true
