[package]
name = "snapdog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-zone audio controller with AirPlay, Snapcast, MQTT, and KNX integration"

[[bin]]
name = "snapdog"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
snapcast-control = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
rumqttc = { workspace = true }
knxkit = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
md5 = { workspace = true }
fastrand = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
cc = "1"
