[package]
name = "snapdog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-zone audio controller with AirPlay, Snapcast, MQTT, and KNX integration"

[[bin]]
name = "snapdog"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
# snapcast-control removed — using own JSON-RPC client (ADR-018)
symphonia = { workspace = true }
rubato = { workspace = true }
biquad = { workspace = true }
rumqttc = { workspace = true }
knxkit = { workspace = true }
knxkit_dpt = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
md5 = { workspace = true }
fastrand = { workspace = true }
bytes = { workspace = true }
rust-embed = "8"
mac_address = "1"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }
shairplay = "0.2"
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev", optional = true }
librespot-playback = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false, optional = true }
librespot-connect = { git = "https://github.com/librespot-org/librespot", branch = "dev", optional = true }
librespot-discovery = { git = "https://github.com/librespot-org/librespot", branch = "dev", optional = true }
librespot-metadata = { git = "https://github.com/librespot-org/librespot", branch = "dev", optional = true }

snapcast-server = { workspace = true, optional = true }

[features]
default = ["snapcast-embedded"]
snapcast-embedded = ["dep:snapcast-server"]
snapcast-process = []
ap2 = ["shairplay/ap2"]
spotify = ["dep:librespot-core", "dep:librespot-playback", "dep:librespot-connect", "dep:librespot-discovery", "dep:librespot-metadata"]

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
